# serializer version: 1
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001]
  array([[105, 104, 105, ..., 111, 110, 108],
         [105, 104, 105, ..., 111, 110, 108],
         [105, 104, 105, ..., 111, 110, 108],
         ...,
         [146, 147, 147, ..., 150, 149, 150],
         [146, 147, 147, ..., 150, 149, 150],
         [146, 147, 147, ..., 150, 149, 150]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001].1
  array([[100,  99, 100, ..., 107, 106, 105],
         [100,  99, 100, ..., 107, 106, 105],
         [100,  99, 100, ..., 107, 106, 105],
         ...,
         [147, 147, 147, ..., 150, 150, 150],
         [147, 147, 147, ..., 150, 150, 150],
         [147, 147, 147, ..., 150, 150, 150]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001].2
  array([[ 96,  93,  94, ...,  85,  84,  82],
         [ 96,  93,  94, ...,  85,  84,  82],
         [ 96,  93,  94, ...,  85,  84,  82],
         ...,
         [144, 143, 142, ..., 154, 153, 154],
         [144, 143, 142, ..., 154, 153, 154],
         [144, 143, 142, ..., 154, 153, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001].3
  array([[120, 117, 119, ..., 113, 114, 114],
         [119, 117, 119, ..., 113, 114, 114],
         [119, 117, 119, ..., 114, 115, 114],
         ...,
         [113, 111, 110, ..., 153, 152, 152],
         [113, 111, 110, ..., 154, 153, 153],
         [113, 111, 110, ..., 154, 153, 153]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001].4
  array([[255, 255, 255, ..., 246, 245, 250],
         [255, 255, 255, ..., 246, 246, 250],
         [255, 255, 255, ..., 246, 246, 250],
         ...,
         [  0,   0,   0, ...,  50,  48,  45],
         [  0,   0,   0, ...,  50,  48,  45],
         [  0,   0,   0, ...,  50,  48,  44]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[DetectorOTFPerturber-w_x-0-w_y-0.003-0.009-0.001].5
  array([[207, 209, 208, ..., 200, 200, 202],
         [207, 209, 208, ..., 200, 200, 202],
         [207, 209, 208, ..., 200, 200, 202],
         ...,
         [ 39,  37,  40, ...,  62,  60,  57],
         [ 39,  37,  40, ...,  62,  60,  57],
         [ 39,  37,  40, ...,  62,  60,  58]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[JitterOTFPerturber-s_y-0-s_x-0.002-0.006-0.001]
  array([[119, 119, 119, ..., 121, 121, 121],
         [118, 118, 118, ..., 115, 115, 115],
         [120, 120, 120, ..., 126, 127, 127],
         ...,
         [146, 146, 146, ..., 152, 152, 152],
         [147, 147, 147, ..., 151, 151, 151],
         [145, 145, 145, ..., 149, 149, 149]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[JitterOTFPerturber-s_y-0-s_x-0.002-0.006-0.001].1
  array([[118, 118, 118, ..., 121, 121, 121],
         [121, 121, 121, ..., 114, 114, 114],
         [122, 122, 122, ..., 121, 121, 121],
         ...,
         [145, 145, 145, ..., 152, 152, 152],
         [147, 147, 147, ..., 151, 151, 151],
         [144, 144, 144, ..., 149, 149, 149]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[JitterOTFPerturber-s_y-0-s_x-0.002-0.006-0.001].2
  array([[118, 118, 118, ..., 122, 122, 122],
         [122, 122, 122, ..., 113, 113, 113],
         [124, 124, 124, ..., 118, 118, 118],
         ...,
         [143, 143, 143, ..., 152, 152, 152],
         [144, 144, 144, ..., 151, 151, 151],
         [142, 142, 142, ..., 150, 150, 150]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[JitterOTFPerturber-s_y-0-s_x-0.002-0.006-0.001].3
  array([[119, 119, 119, ..., 123, 123, 123],
         [124, 124, 124, ..., 111, 111, 111],
         [125, 125, 125, ..., 115, 115, 115],
         ...,
         [139, 139, 139, ..., 153, 153, 153],
         [140, 140, 140, ..., 152, 152, 152],
         [139, 139, 139, ..., 150, 150, 150]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066]
  array([[141, 145, 143, ..., 133, 137, 137],
         [111, 116, 124, ..., 130, 123, 123],
         [123, 126, 130, ..., 152, 152, 147],
         ...,
         [135, 152, 143, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].1
  array([[141, 145, 143, ..., 133, 137, 137],
         [111, 116, 124, ..., 130, 123, 123],
         [123, 126, 130, ..., 152, 152, 147],
         ...,
         [135, 152, 143, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].2
  array([[141, 145, 143, ..., 133, 137, 137],
         [111, 116, 124, ..., 130, 123, 123],
         [123, 126, 130, ..., 152, 152, 147],
         ...,
         [135, 152, 143, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].3
  array([[140, 144, 143, ..., 133, 137, 137],
         [112, 116, 124, ..., 130, 124, 123],
         [123, 126, 130, ..., 152, 151, 147],
         ...,
         [136, 152, 143, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].4
  array([[140, 144, 142, ..., 133, 136, 137],
         [112, 117, 124, ..., 130, 124, 124],
         [123, 126, 130, ..., 151, 151, 146],
         ...,
         [136, 152, 144, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].5
  array([[140, 144, 142, ..., 133, 136, 136],
         [112, 117, 124, ..., 131, 124, 124],
         [123, 126, 130, ..., 151, 151, 146],
         ...,
         [136, 151, 144, ..., 164, 154, 152],
         [150, 156, 152, ..., 159, 161, 156],
         [156, 159, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
# name: TestStepPerturbImageFactory.test_perturb_instance_modification[TurbulenceApertureOTFPerturber-altitude-250-D-0.0004-0.04-0.0066].6
  array([[139, 143, 142, ..., 133, 136, 136],
         [113, 117, 125, ..., 131, 125, 124],
         [123, 126, 130, ..., 151, 150, 146],
         ...,
         [137, 151, 144, ..., 163, 154, 152],
         [150, 156, 152, ..., 159, 160, 156],
         [156, 158, 152, ..., 159, 154, 154]], dtype=uint8)
# ---
